--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -2,10 +2,9 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
+$font-family-sans-serif: 'Sahel', sans-serif;
+$font-size-base: 1rem;
 $line-height-base: 1.6;
-
 // Colors
 $blue: #3490dc;
 $indigo: #6574cd;
